<resources>
    <!--APP-->
    <string name="app_name">PrabhuCoop</string>
    <string name="welcome_prabhucoop">Welcome to PrabhuCoop</string>
    <string name="mobile_app">Mobile app</string>
    <string name="collector_app_label">Collector app</string>

    <string name="is_required">is required</string>
    <string name="selected_CD">selected</string>
    <string name="dropdown_CD">from DropDown</string>
    <string name="select_CD">Select</string>
    <string name="datepicker_CD">from DatePicker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_message_while_login">Unable to connect to Server. Do you want to Try Again?</string>
    <string name="yes">Yes</string>
    <string name="we_have_enhanced_our_features">We have enhanced our features.</string>
    <string name="prabhupay_needs_an_update_download_the_latest_app">PrabhuPAY needs an update. Download the latest app.</string>
    <string name="what_s_new">What\'s new</string>
    <string name="later">Later</string>
    <string name="update_now">Update Now</string>

    <!-- Login fragment -->
    <string name="login">Login</string>
    <string name="get_password">Get Password?</string>
    <string name="use_fingerprint_instead">Use Fingerprint Instead</string>
    <string name="use_finger_print">Use finger print</string>
    <string name="password_mpin">Password/mPIN</string>
    <string name="mobile_email">Mobile/Email</string>

    <!-- Dummy text -->
    <string name="lorem_list">Lorem ipsum dolor sit amet, \nut vel quis dolorum, natum sape\nret et vim. Has ad nulla numquam vituper\nata, duo at illum scaevola. Eos liber fierent aliquand\no no, eu duo tota equidem. Recusabo ocurrere\nt suscipiantur eos ex, justo dicta mundi mea ut, alia solum aliquam est cu.</string>
    <string name="register_now">Register Now</string>
    <string name="registration">Registration</string>
    <string name="please_enter_your_phone_number_kyc_verified">Please enter your phone number. (KYC verified)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="recover_account">Recover Account</string>
    <string name="recover_subtitle">We will send the confirmation code through SMS/Email. \n Please type your mobile number/email below.</string>
    <string name="having_problems">Having Problems?</string>
    <string name="contact_us">CONTACT US</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_password_subtitle">Your code is verified. Please enter a new password below</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="verify_mobile_subtitle">Please enter the activation code you received through \n SMS / Email</string>
    <string name="enter_your_activation_code">Enter your activation code</string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="get_started">GET STARTED!</string>
    <string name="congratulations">Congratulations</string>
    <string name="congratulation_subtitle">Activation Successful, Now you can login in to your account</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="network_error">Network Error</string>
    <string name="please_check_your_connection_and_try_again">Please check your connection and try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_try_again">Please try again.</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="unable_to_find_service">Unable to find service.</string>
    <string name="server_error">Server Error</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="sorry">Sorry</string>
    <string name="update">Update</string>
    <string name="kyc_not_verified">Kyc Not Verified</string>
    <string name="note_kyc_not_verified_alert">Your kyc has not been verified yet. Please verify your kyc and try again</string>
    <string name="update_kyc">Update KYC</string>
    <string name="ok">OK</string>
    <string name="refer_a_friend_is_currently_not_available">Refer a friend is currently not available</string>
    <string name="toolbar_back_CD">Go back</string>
    <string name="err_user_is_already_registered">You are already registered</string>
    <string name="xxx_xx">XXX.XX</string>
    <string name="visibility">Visibility</string>
    <string name="your_available_balance">Your Available Balance</string>

    <!--Navigation view items-->
    <string name="request_cheque">Request Cheque</string>
    <string name="request_debit_card">Request Debit Card</string>
    <string name="complain">Complain</string>
    <string name="activity_log">Activity log</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="delivery_branch">Delivery Branch</string>
    <string name="description">Description</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="under_contrustion">This service is currently under construction!!!</string>
    <string name="go_back">Go Back</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="you_will_have_to_login_again_using_password_mpin">You will have to login again using password.</string>
    <string name="email_address">Email address</string>
    <string name="customer_address">Customer Address</string>
    <string name="complain_feedback">Complain/ Feedback</string>

    <!-- Explore Fragment -->
    <string name="bank_transfer_CD">Transfer your wallet balance to various banks using</string>
    <string name="load_fund_option">Load Fund</string>
    <string name="my_account">My Account</string>
    <string name="remittance">Remittance</string>
    <string name="wallet_transfer">Wallet Transfer</string>
    <string name="fund_transfer_text">Fund Transfer</string>
    <string name="utility_bills">Utility Bills</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="online_store">Online Store</string>
    <string name="events">Events</string>
    <string name="please_wait">Please wait…</string>

    <!-- My Account Fragment -->
    <string name="account_name">Account Name</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="account_number">Account Number</string>
    <string name="available_balance">Available Balance</string>
    <string name="npr">NPR:</string>
    <string name="actual_balance">Actual Balance</string>
    <string name="accrued_interest">Accured Interest</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="statement">Statement</string>
    <string name="chart">Chart</string>
    <string name="details">Details</string>
    <string name="no_recent_transactions">No recent transaction</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="no_event">No event</string>
    <string name="no_transaction_yet">No Transaction Yet</string>
    <string name="collector">Collector</string>

    <string name="access_code">Access Code</string>
    <string name="token_expired">Token Expired</string>
    <string name="contact_infos">Please, Try logging in again.</string>
    <string name="default_notification_channel_id">all</string>
    <string name="notification_bell_CD">Explore your notifications</string>
    <string name="clear_notifications">Clear Notifications</string>
    <string name="no_notification">No notifications right now</string>
    <string name="credited">Credited</string>
    <string name="debited">Debited</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="notifications">Notifications</string>
    <string name="full_name">Full Name</string>
    <string name="use_this_qr_code_to_receive_payments">Use this QR Code to receive payments</string>
    <string name="system_date">System Date</string>
    <string name="current_date">Current Date</string>
    <string name="_2072_01_02">2072-01-02</string>
    <string name="today_s_total_collection">Today\'s Total Collection</string>
    <string name="show_or_hide_the_balance">Show or Hide the Balance</string>
    <string name="select_statement">select statement</string>
    <string name="cbs_sync">CBS Sync</string>
    <string name="bal_bachat">Bal Bachat</string>
    <string name="anish_maharjan">Anish Maharjan</string>
    <string name="account_num">00123332GHA12312</string>
    <string name="collection_amount">Collected Amount</string>
    <string name="location">Location</string>
    <string name="npr1000">NPR 1000</string>
    <string name="edits"><u>Edit</u></string>
    <string name="status">Status</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="_collection_amount">Collection Amount</string>
    <string name="close_edit_image">Close Edit Button</string>
    <string name="saving_scheme">Saving Scheme</string>
    <string name="collectorArea">Collector Area</string>
    <string name="search">Search</string>
    <string name="search_member">Search Member</string>
    <string name="save">Save</string>
    <string name="member_name">Member Name</string>
    <string name="collector_app">COLLECTOR</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="view_statement">View Statement</string>
    <string name="today_2078_09_21">Today, 2078-09-21</string>
    <string name="sync_loading">CBS Syncing…</string>
    <string name="plus_sign">+</string>
    <string name="add_to_my_payment">Add to my payment</string>
    <string name="top_up">Top up</string>
    <string name="you_will_be_awarded">You will be awarded</string>
    <string name="cashBack">Cashback</string>
    <string name="package_amount">Package Amount</string>
    <string name="package_description">Package Description</string>
    <string name="enter_amount">Enter Amount (NPR)</string>
    <string name="amount">Amount (NPR)</string>
    <string name="contactfetch_contacts_CD">Select phone number from your contacts</string>
    <string name="contactfetch_mynumber_CD">Select your own phone number</string>
    <string name="invalid_phone_format">*Invalid phone format</string>
    <string name="landline_number">Landline Number</string>
    <string name="select_package">Select Package</string>
    <string name="enter_collection_amount">Enter Collection Amount</string>
    <string name="account_statement">Account Statement</string>
    <string name="note">Note:</string>
    <string name="you_can_topup_following_services">You can topup following services:</string>
    <string name="topup_note">NTC (Postpaid, Prepaid, CDMA, ADSL, Landline) NCELL (Prepaid, Postpaid) SMART CELL</string>
    <string name="enter_mpin_CD">Enter mPin</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="success">Success</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="see_payment_details">See payment details</string>
</resources>