<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:layout_gravity="center"
    android:background="@drawable/round_indicator">

    <LinearLayout
        android:id="@+id/container_cashback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/you_will_be_awarded"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cashback_indicator_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_5"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/xxx_xx"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:text="@string/cashBack"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>